Add link to SFDA higher pharmacovigilance committee

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                         <p class="text-gray-700">Follow-ups for incomplete ADR reports are performed and documented according to **SFDA timelines**.</p>
                     </div>
                     <div class="practice-item p-5 rounded-xl shadow-md border-t-green-500 border-t-4">
+                        <a href="https://sfda.gov.sa/en/higher-pharmacovigilance-advisory-committee-decisions" target="_blank" rel="noopener noreferrer" class="hover:underline">
                         <span class="text-lg font-bold text-green-700 block mb-2">3. Signal Review</span>
                         <p class="text-gray-700">Signal detection and review activities are conducted at the **frequency required** by SFDA GVP or internal SOPs.</p>
                     </div>
